--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		&quot;Automated Program Repair&quot;, Ministry of Education (MoE) Tier3 program, 
+		&quot;
+			<a href="https://nus-apr.github.io">Automated Program Repair</a>&quot;, Ministry of Education (MoE) Tier3 program, 
 		2022-27.</p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
