--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		&quot;<a href="https://nus-apr.github.io">Automated Program Repair</a>&quot;, Ministry of Education (MoE) Tier3 program, 
+		<a href="https://nus-apr.github.io">Automated Program Repair</a>, Ministry of Education (MoE) Tier3 program, 
 		2022-27.</p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
