--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<br>	<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-	<a href="http://www.comp.nus.edu.sg/~abhik/projects/Repair/index.html">
+	<a href="https://nus-apr.github.io">
 	Automated Program Repair</a> (2022-27):&nbsp;
 	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</font></p>
 	</ul>
