--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 	Provost's Chair Professor of Computer Science at the National University of 
 	Singapore, where he has been since 2001 after receiving his Ph.D. in 
 	Computer Science from the State University of New York at Stony Brook in 
-	2000. He is the Director of the National Satellite of 
-	Excellence in Trustworthy Software Systems at Singapore (2019-23). He has 
+	2000. He is the Director of the <a href="https://www.comp.nus.edu.sg/~nsoe-tss/">National Satellite of 
+		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has 
 	previously led the <a href="https://www.comp.nus.edu.sg/~tsunami">TSUNAMi 
 	research center</a> (2015-20), a large five-year long targeted research 
 	effort funded by National Research Foundation in the domain of trust-worthy 
