--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<H3><font face="Arial">
 		<a href="https://www.comp.nus.edu.sg/cs/bio/abhik">Abhik Roychoudhury</a></font><font size="5" face="Arial">       </font> 			</H3> 			  	<H3>
 		<font face="Arial" size="2">Provost's Chair Professor <br> 
-		Department of Computer Science<br> National University of Singapore</font></H3>
+			<a href="https://www.comp.nus.edu.sg/cs/">Department of Computer Science</a><br> 
+			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<H3>&nbsp;</H3>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i></span><br> 
