--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<H3>&nbsp;</H3>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
-		<i> abhik at comp.nus.edu.sg</i></span><br> 
+		<i> abhik at comp.nus.edu.sg</i>(Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik at 
 	u.nus.edu, dcsar at nus.edu.sg</i></span></font></H3>            			</blockquote>       </DIV></TD>      		 	
 	<TD width="266" bgcolor="#FFFFFF">        		<p align="center"> 	 		 	&nbsp;</p>
