--- a/students.htm
+++ b/students.htm
@@ -72,7 +72,7 @@ and Behavioral Inference of Stateful Systems</i>.</font></p>
 with Sergey Mechtaev and Emmanuel Letier.</font></p>
 <p>
 <a href="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png">
-<img src="Blank_portrait,_male_(rectangular)_small.png" xthumbnail-orig-image="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png" border="2" width="99" height="127"></a></p>
+<img src="Blank_portrait,_male_(rectangular)_small.png" xthumbnail-orig-image="ruijie.jpeg" border="2" width="99" height="127"></a></p>
 <p><font face="Arial" size="2"><b>Ruijie Meng</b>, Joined August 2020, 
 Co-advised with Ilya Sergey.</font></p>
 <p>
@@ -146,7 +146,7 @@ Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black
 <span class="scopediv pageHeader" id="pageHeader">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp; 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp; 
 				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,</i> 
 Graduated 2014 -&gt; Senior Lecturer, Monash -&gt; Faculty Member, Max-Planck 
 Institute for Security and Privacy.</span></span></span></span></span></span></font></p>
@@ -240,7 +240,7 @@ Senior Research Fellow (2013-17),&nbsp; PhD Aarhus U. (Denmark), Moved to Ulsan
 <span class="scopediv pageHeader" id="pageHeader0">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson0">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser0"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp;Research 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp;Research 
 Fellow &amp; Senior 
 Research Fellow (2015-18), PhD NUS -&gt; </span></span></span></span></span></span>
 <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString1">
@@ -256,7 +256,7 @@ Monash -&gt; Faculty Member, Max-Planck Institute for Security and Privacy.</spa
 (Switzerland), moved to Politecnico di Milano.</font></p>
 <p><a href="clement.jpg">
 <img border="2" src="clement_small.jpg" xthumbnail-orig-image="clement.jpg"></a></p>
-<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">Clément Ballabriga</a></b>, Research Fellow 
+<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">ClÃ©ment Ballabriga</a></b>, Research Fellow 
 at NUS (2012 - 2014), PhD University of Toulouse 
 (France), Moved to University of Lille (France), currently Associate Professor.</font></p>
 <p><a href="bruno.jpg">
