--- a/papers.html
+++ b/papers.html
@@ -8,7 +8,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Fairware22]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>
 		Fair Decision Making via Automated Repair of Decision Trees
-		( <a href="pdf/Fairware22">PDF</a> )</b></p>
+		( <a href="pdf/FairWare22.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jiang Zhang, Ivan Beschastnikh, Sergey Mechtaev, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Fairware workshop, Co-located with ICSE, 2022.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
