--- a/students.htm
+++ b/students.htm
@@ -218,7 +218,7 @@ Validation of UML-like models for Reactive Embedded Systems</font></a><i>, G</i>
 <a href="gao.jpg">
 <img border="2" src="gao_small.jpg" xthumbnail-orig-image="gao.jpg"></a></p>
 	<font face="Arial" size="2">
-	<p><b>Xiang Gao, </b>moved to Beihang University (2022).</p>
+	<p><b>Xiang Gao, </b>moved to Beihang University as Associate Professor (2022).</p>
 </font>
 <p>
 <a href="zhen.jpg">
