--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 	Cyber-security Consortium (2016-22), which is a consortium of 25 companies 
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
-	software security and trust-worthy software construction. His research team is known for contributions to 
+	software security and trust-worthy software construction. He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution as well as its usage in test generation and program repair.
+	His research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>. </font></span>
 	<font face="Arial" color="#800080"><b><br>
 &nbsp;</b></font></p>
