--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 	His research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>. He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
 	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. 
-	The TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice where these contributions moved the field in a new direction.
+	The TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
+	where these contributions moved the field in a new direction.
 	</font></span>
 	<font face="Arial" color="#800080"><b><br>
 &nbsp;</b></font></p>
