--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
 	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</font></p>
+		
+	<li>Awarded IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. 
+	The TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
+	where these contributions moved the field in a new direction.	
 	</ul>
  	 	
 
