--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. 
-	His research team is known for contributions to 
-	<i>automated program repair</i>, and <i>fuzz testing</i>. He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+	He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
 	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. 
 	The TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
-	where these contributions moved the field in a new direction.
+	where these contributions moved the field in a new direction. Abhik's research team is known for contributions to 
+	<i>automated program repair</i>, and <i>fuzz testing</i>. 
 	</font></span>
 	<font face="Arial" color="#800080"><b><br>
 &nbsp;</b></font></p>
