--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. 
 	He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
-	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. 
-	The TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
+	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair, where
+	the TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
 	where these contributions moved the field in a new direction. Abhik's research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>. 
 	</font></span>
