--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
-	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</font></p>
+	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.
+		
+		<br>
+			
+		<li> Honored to receive IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. The 
+	TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
+	where these contributions moved the field in a new direction.
+			
+			
+			</font></p>
 		
 
 	</ul>
@@ -96,7 +106,7 @@
 	He was awarded the IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
 	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair, where
 	the TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
-	where these contributions moved the field in a new direction. Abhik's research team is known for contributions to 
+	with these contributions moving the field in a new direction. Abhik's research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>. 
 	</font></span>
 	<font face="Arial" color="#800080"><b><br>
