--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
 	<ul>
 		<li>
 		Recent developments:<ul>
+			<li><i>[Mar22]&nbsp; </i>
+			Honored to receive IEEE Technical Committee of Software Engineering New Directions Award, jointly with 
+				<a href ="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, 
+				for contributions to symbolic execution used for test generation and program repair.
+			
     <li><i>[Jan22]&nbsp; </i>Ministry of Education (MoE) Tier 3 program 
 	Automated Program Repair funded to 2027, Co-PIs
 	<a href="https://www.comp.nus.edu.sg/~ilya">Ilya Sergey</a> and
