--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
 	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
 	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.
 		
-		<br>
+		<br><br>
 			
 		<li> Honored to receive IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
-	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, specifically for test generation and program repair. The 
-	TCSE New Directions Award is presented annually to an individual or team who have made substantial contributions to software engineering research or practice 
-	where these contributions moved the field in a new direction.
+	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, used for test generation and program repair. 
 			
 			
 			</font></p>
