--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 		
 		<br><br>
 			
-		<li> Honored to receive IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
-	(jointly with Cristian Cadar) in 2022 for contributions to symbolic execution, used for test generation and program repair. 
+		<li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
 			
 			
 			</font></p>
