--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. 
 	 Abhik's research team is known for contributions to 
-	<i>automated program repair</i>, and <i>fuzz testing</i>. 
+	<i>automated program repair</i>, and <i>fuzz testing</i>.  
+	Some of these contributions have been recognized by awards such as IEEE TCSE New Directions Award 2022, 
+        or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team.
 	</font></span>
 	<font face="Arial" color="#800080"><b><br>
 &nbsp;</b></font></p>
