--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
 	Cyber-security Consortium (2016-22), which is a consortium of 25 companies 
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
-	software security and trust-worthy software construction. Abhik's research team is known for contributions to 
+	software security and trust-worthy software construction. His research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>.  These contributions have been recognized via awards such as IEEE TCSE New Directions Award 2022, 
         or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team.
-	</font></span>
-	<font face="Arial" color="#800080"><b><br>
-&nbsp;</b></font></p>
+		</font></span></p>
+		<br>
+	<font face="Arial" color="#800080"><b>
+&nbsp;</b></font>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<span style="letter-spacing: 1pt"><font face="Arial">Abhik is a member of 
 	the Steering committee of the flagship conferences in Software Engineering, 
