--- a/index.html
+++ b/index.html
@@ -103,11 +103,7 @@
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. His research team is known for contributions to 
 	<i>automated program repair</i>, and <i>fuzz testing</i>.  These contributions have been recognized via awards such as IEEE TCSE New Directions Award 2022, 
-        or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team.
-		</font></span></p>
-		
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<span style="letter-spacing: 1pt"><font face="Arial">Abhik is a member of 
+        or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team. Abhik is a member of 
 	the Steering committee of the flagship conferences in Software Engineering, 
 	International Conference on Software Engineering (ICSE) and Symposium on 
 	Foundations of Software Engineering (FSE). Specifically he has served as 
