--- a/index.html
+++ b/index.html
@@ -88,21 +88,17 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<span style="letter-spacing: 1pt"><font face="Arial">Abhik Roychoudhury is a 
+	<font face="Arial">Abhik Roychoudhury is a 
 	Provost's Chair Professor of Computer Science at the National University of 
 	Singapore, where he has been since 2001 after receiving his Ph.D. in 
 	Computer Science from the State University of New York at Stony Brook in 
 	2000. He is the Director of the <a href="https://www.comp.nus.edu.sg/~nsoe-tss/">National Satellite of 
-		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has 
-	previously led the <a href="https://www.comp.nus.edu.sg/~tsunami">TSUNAMi 
-	research center</a> (2015-20), a large five-year long targeted research 
-	effort funded by National Research Foundation in the domain of trust-worthy 
-	software. He has also helped set up the Singapore 
+		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has also helped set up the Singapore 
 	Cyber-security Consortium (2016-22), which is a consortium of 25 companies 
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. His research team is known for contributions to 
-	<i>automated program repair</i>, and <i>fuzz testing</i>.  These contributions have been recognized via awards such as IEEE TCSE New Directions Award 2022, 
+	<i>automated program repair</i>, and <i>fuzz testing</i>.  These contributions have been recognised such as IEEE TCSE New Directions Award 2022, 
         or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team. Abhik is a member of 
 	the Steering committee of the flagship conferences in Software Engineering, 
 	International Conference on Software Engineering (ICSE) and Symposium on 
