--- a/index.html
+++ b/index.html
@@ -98,19 +98,15 @@
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. His research team is known for contributions to 
-	<i>automated program repair</i>, and <i>fuzz testing</i>.  These contributions have been recognised such as IEEE TCSE New Directions Award 2022, 
-        or the ACM SIGSOFT Outstanding Dissertation Award 2019 awarded to a PhD disseration from his team. Abhik is a member of 
+	<i>automated program repair</i>, and <i>fuzz testing</i>. Abhik is a member of 
 	the Steering committee of the flagship conferences in Software Engineering, 
 	International Conference on Software Engineering (ICSE) and Symposium on 
-	Foundations of Software Engineering (FSE). Specifically he has served as 
-	Program Chair of ISSTA 2016, General Chair of FSE 2022 and Program Co-chair 
-	of ICSE 2024. He has served as an Associate Editor of IEEE Transactions on 
-	Software Engineering (TSE) during 2014-18. He is also an Associate Editor of 
-	IEEE Transactions on Dependable and Secure Computing (TDSC) and ACM 
+	Foundations of Software Engineering (FSE). He has served as an Associate Editor of IEEE Transactions on 
+	Software Engineering (TSE), IEEE Transactions on Dependable and Secure Computing (TDSC) and ACM 
 	Transactions on Software Engineering and Methodology (TOSEM). His former doctoral 
 	students have been placed all over the world as academics 
 	(Peking University, University College London, Max-Planck Institute, 
-	University of Melbourne, SUSTech, SUTD).</font></span></p>
+	University of Melbourne, SUSTech, SUTD).</font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
  	 	
