--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 	Singapore, where he has been since 2001 after receiving his Ph.D. in 
 	Computer Science from the State University of New York at Stony Brook in 
 	2000. He is the Director of the <a href="https://www.comp.nus.edu.sg/~nsoe-tss/">National Satellite of 
-		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has also helped set up the Singapore 
-	Cyber-security Consortium (2016-22), which is a consortium of 25 companies 
+		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has also helped set up the <a href="https://sgcsc.sg">Singapore 
+		Cyber-security Consortium </a>, which is a consortium of 25 companies 
 	in the cyber-security space engaging with academia for research and 
 	collaboration. Abhik's research focuses on software testing and analysis, 
 	software security and trust-worthy software construction. His research team is known for contributions to 
