--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	Transactions on Software Engineering and Methodology (TOSEM). His former doctoral 
 	students have been placed all over the world as academics 
 	(Peking University, University College London, Max-Planck Institute, 
-	University of Melbourne, SUSTech, SUTD).</font></p>
+	University of Melbourne, Beihang University, SUSTech, SUTD).</font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
  	 	
