--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -254,6 +254,14 @@
 	<p><u><b><font size="6" face="Arial">Publications</font></b></u></p>
 <font face="Arial">
 
+	
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Vulnerability Repair via Inductive Inference ( <a href="../../pdf/ISSTA22.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Xiang Gao, Gregory J. Duck, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2022.</p>   <font face="Arial" size="2"> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	</font>    	
+	
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Verifix: Verified Repair 
@@ -268,8 +276,11 @@
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE22]
 	</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Trust Enhancement Issues 	in Program Repair ( <a href="../../pdf/ICSE22-TrustAPR.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yannic Noller, Ridwan 	Shariffdeen, Xiang Gao, Abhik Roychoudhury</p>	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM 44th International 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Trust Enhancement Issues 
+	in Program Repair ( <a href="../../pdf/ICSE22-TrustAPR.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yannic Noller, Ridwan 
+	Shariffdeen, Xiang Gao, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM 44th International 
 	Conference on Software Engineering (ICSE) 2022.</p>
 
 
@@ -523,7 +534,7 @@
 	<b>A Correlation Study between Automated Program Repair and Test-suite 
 	Metrics (&nbsp;<a href="https://www.comp.nus.edu.sg/~abhik/pdf/EMSE18.pdf">PDF</a>&nbsp;)</b></p>
 	<p style="color: rgb(0, 0, 0); font-family: Arial; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-top: 0px; margin-bottom: 0px; background-color: rgb(255, 255, 255)">
-	Jooyong Yi, Shin Hwei Tan, Sergey Mechtaev, Marcel&nbsp;<span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString6"><span class="scopediv body" id="body6"><span class="section section1"><span class="scopediv pageHeader" id="pageHeader6"><span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson6"><span class="scopediv ofUserUser ofUser" id="ofUserUser6">Böhme</span></span></span></span></span></span>, 
+	Jooyong Yi, Shin Hwei Tan, Sergey Mechtaev, Marcel&nbsp;<span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString6"><span class="scopediv body" id="body6"><span class="section section1"><span class="scopediv pageHeader" id="pageHeader6"><span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson6"><span class="scopediv ofUserUser ofUser" id="ofUserUser6">BÃ¶hme</span></span></span></span></span></span>, 
 	Abhik Roychoudhury</p>
 	<p style="color: rgb(0, 0, 0); font-family: Arial; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; margin-top: 0px; margin-bottom: 0px; background-color: rgb(255, 255, 255)">
 	Empirical Software Engineering Journal, 23(5), pages 2948-2979, 2018.</p>
