--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		<br><br>
 			
-		<li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE Technical Committee on Software Engineering (TCSE)'s New Directions Award 
+		<li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 
 	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
 			
 			
