--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -47,10 +47,12 @@
   <h1><u><font face="Arial">News</font></u></h1>
   <p class=news-text>
 	<span lang=EN style='font-family:"Arial";color:#373A3C;mso-ansi-language:EN'>
-    <b>
+    <p class=news-text>
+	<span style="color: #373A3C"><b><span style="font-family: Arial">202</span></b></span><span lang=EN style='font-family:"Arial";color:#373A3C;mso-ansi-language:EN'><b>1: </b>
+	ThanksIEEE TCSE New Directions Award 2022 recognises work on symbolic execution for test generation and program repair (Cristian Cadar and Abhik Roychoudhury)</span></p>
 	2022:&nbsp; Ministry of Education (MoE) Tier3 research program at NUS on 
 	Program repair (2022-27):&nbsp; <a href="T3/MoET32022.pdf">Post-docs being 
-	recruited. </a></b></span></p>
+	recruited. </a></span></p>
 	<p class=news-text>
 	<span style="color: #373A3C"><b><span style="font-family: Arial">202</span></b></span><span lang=EN style='font-family:"Arial";color:#373A3C;mso-ansi-language:EN'><b>1: </b>
 	Thanks to Oracle for their generous donation to further our research on 
