--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -49,8 +49,8 @@
 	<span lang=EN style='font-family:"Arial";color:#373A3C;mso-ansi-language:EN'>
     <p class=news-text>
 	<span style="color: #373A3C"><b><span style="font-family: Arial">202</span></b></span><span lang=EN style='font-family:"Arial";color:#373A3C;mso-ansi-language:EN'><b>1: </b>
-	2022: &nbsp; IEEE TCSE New Directions Award 2022 recognises work on symbolic execution for test generation and program repair (Cristian Cadar and Abhik Roychoudhury)</span></p>
-	2022:&nbsp; Ministry of Education (MoE) Tier3 research program at NUS on 
+	<b>2022:</b>&nbsp; IEEE TCSE New Directions Award 2022 recognises work on symbolic execution for test generation and program repair (Cristian Cadar and Abhik Roychoudhury)</span></p>
+	<b> 2022:</b>&nbsp; Ministry of Education (MoE) Tier3 research program at NUS on 
 	Program repair (2022-27):&nbsp; <a href="T3/MoET32022.pdf">Post-docs being 
 	recruited. </a></span></p>
 	<p class=news-text>
