--- a/students.htm
+++ b/students.htm
@@ -62,10 +62,7 @@ An old group photograph taken in 2016. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 <p><font face="Arial" size="2"><b><a href="https://zhiyufan.github.io">Zhiyu Fan</a></b>, Joined August 2019, <i>Machine 
 Teaching and Intelligent tutoring for Programming Education, </i>co-advised with 
 Shin Hwei Tan.</font></p>
-<p><a href="jinsheng.jpg">
-<img border="2" src="jinsheng_small.jpg" xthumbnail-orig-image="jinsheng.jpg"></a></p>
-<p><font face="Arial" size="2"><b>Jinsheng Ba</b>, Joined Jan 2020, <i>Fuzzing 
-and Behavioral Inference of Stateful Systems</i>.</font></p>
+
 <p><a href="photo.jpg">
 <img border="2" src="photo_small.jpg" xthumbnail-orig-image="photo.jpg"></a></p>
 <p><font face="Arial" size="2"><b>Liu Yu</b>, Joined August 2020, Co-advised 
@@ -83,11 +80,17 @@ Co-advised with Ilya Sergey.</font></p>
 <p><a href="https://dylanjwolff.com/assets/img/prof_pic.jpg">
 <img src="prof_pic_small.jpg" xthumbnail-orig-image="https://dylanjwolff.com/assets/img/prof_pic.jpg" border="2"></a></p>
 <p><font face="Arial" size="2"><b><a href="https://dylanjwolff.com/">Dylan Wolff</a></b>,&nbsp; Joined 2021 (PhD 
-student).</font></p>
+	student), <i>Concurrent system fuzzing</i> (tentative topic).</font></p>
 <p>
 <a href="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png">
 <img src="Blank_portrait,_male_(rectangular)_small.png" xthumbnail-orig-image="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png" border="2"></a></p>
 <p><font face="Arial" size="2"><b>Haifeng Ruan</b>, Joined 2021 (PhD student).</font></p>
+<p><a href="mirchev.jpg">
+<img border="2" src="mirchev_small.jpg" xthumbnail-orig-image="mirchev.jpg"></a></p>
+<p><font face="Arial" size="2"><b>Martin Mirchev</b>, August 2022.</font></p>	
+	
+	
+	
 <hr>
 
   <p><b><font face="Arial" size="5" color="#800080">Final year undergraduate</font></b><font face="Arial" color="#800080" size="5"><b> Students 
