--- a/students.htm
+++ b/students.htm
@@ -59,38 +59,39 @@ An old group photograph taken in 2016. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 <i>Software Vulnerability Repair.</i></font></p>
 <p><a href="zhiyu.JPG.jpeg">
 <img border="2" src="zhiyu.JPG_small.jpeg" xthumbnail-orig-image="zhiyu.JPG.jpeg"></a></p>
-<p><font face="Arial" size="2"><b><a href="https://zhiyufan.github.io">Zhiyu Fan</a></b>, Joined August 2019, <i>Machine 
-Teaching and Intelligent tutoring for Programming Education, </i>co-advised with 
+<p><font face="Arial" size="2"><b><a href="https://zhiyufan.github.io">Zhiyu Fan</a></b>, Joined August 2019,&nbsp;
+<i>Program repair for Intelligent Tutoring and Programming Education, </i>co-advised with 
 Shin Hwei Tan.</font></p>
-
 <p><a href="photo.jpg">
 <img border="2" src="photo_small.jpg" xthumbnail-orig-image="photo.jpg"></a></p>
-<p><font face="Arial" size="2"><b>Liu Yu</b>, Joined August 2020, Co-advised 
-with Sergey Mechtaev and Emmanuel Letier.</font></p>
+<p><font face="Arial" size="2"><b>Liu Yu</b>, Joined August 2020, <i>Analysis 
+guided Program Repair</i>, Co-advised 
+with Sergey Mechtaev.</font></p>
 <p>
-<a href="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png">
-<img src="Blank_portrait,_male_(rectangular)_small.png" xthumbnail-orig-image="ruijie.jpeg" border="2" width="99" height="127"></a></p>
-<p><font face="Arial" size="2"><b>Ruijie Meng</b>, Joined August 2020, 
-Co-advised with Ilya Sergey.</font></p>
+<a href="https://mengrj.github.io/img/ava3.jpg">
+<img src="ava3_small.jpg" xthumbnail-orig-image="https://mengrj.github.io/img/ava3.jpg" border="2"></a></p>
+<p><font face="Arial" size="2"><b><a href="https://mengrj.github.io">Ruijie Meng</a></b>, Joined August 2020, 
+<i>Property guided Fuzz Testing</i>, Co-advised with Ilya Sergey.</font></p>
 <p>
 <a href="https://media-exp1.licdn.com/dms/image/C5603AQEZUUmGY-gDYg/profile-displayphoto-shrink_200_200/0/1589000373177?e=1632960000&v=beta&t=yRZcjG4VnZyLJ-qAQ6Kjb8v-8fGriHyB6yjxeXTZB2c">
 <img src="1589000373177_small.jpg" alt="Yuntong Zhang" xthumbnail-orig-image="https://media-exp1.licdn.com/dms/image/C5603AQEZUUmGY-gDYg/profile-displayphoto-shrink_200_200/0/1589000373177?e=1632960000&amp;v=beta&amp;t=yRZcjG4VnZyLJ-qAQ6Kjb8v-8fGriHyB6yjxeXTZB2c" border="2"></a></p>
-<p><b><font face="Arial" size="2">Yuntong Zhang</font></b><font face="Arial" size="2">, Joined 
+<p><b><font face="Arial" size="2">Yuntong Zhang</font></b><font face="Arial" size="2">, 
+Joined August 
 2021 (PhD student and RA), <i>Program Binary Repair </i>(tentative topic).</font></p>
 <p><a href="https://dylanjwolff.com/assets/img/prof_pic.jpg">
 <img src="prof_pic_small.jpg" xthumbnail-orig-image="https://dylanjwolff.com/assets/img/prof_pic.jpg" border="2"></a></p>
-<p><font face="Arial" size="2"><b><a href="https://dylanjwolff.com/">Dylan Wolff</a></b>,&nbsp; Joined 2021 (PhD 
-	student), <i>Concurrent system fuzzing</i> (tentative topic).</font></p>
+<p><font face="Arial" size="2"><b><a href="https://dylanjwolff.com/">Dylan Wolff</a></b>,&nbsp; Joined 
+August 2021 (PhD 
+student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 <p>
 <a href="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png">
 <img src="Blank_portrait,_male_(rectangular)_small.png" xthumbnail-orig-image="https://www.comp.nus.edu.sg/~abhik/projects/Fuzz/Blank_portrait,_male_(rectangular).png" border="2"></a></p>
-<p><font face="Arial" size="2"><b>Haifeng Ruan</b>, Joined 2021 (PhD student).</font></p>
+<p><font face="Arial" size="2"><b>Haifeng Ruan</b>, Joined August 2021 (PhD student),
+<i>Interactive Program Repair</i> (tentative topic).</font></p>
 <p><a href="mirchev.jpg">
 <img border="2" src="mirchev_small.jpg" xthumbnail-orig-image="mirchev.jpg"></a></p>
-<p><font face="Arial" size="2"><b>Martin Mirchev</b>, August 2022.</font></p>	
-	
-	
-	
+<p><font face="Arial" size="2"><b>Martin Mirchev</b>, August 2022 (PhD student).
+</font></p>
 <hr>
 
   <p><b><font face="Arial" size="5" color="#800080">Final year undergraduate</font></b><font face="Arial" color="#800080" size="5"><b> Students 
@@ -149,7 +150,7 @@ Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black
 <span class="scopediv pageHeader" id="pageHeader">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp; 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp; 
 				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,</i> 
 Graduated 2014 -&gt; Senior Lecturer, Monash -&gt; Faculty Member, Max-Planck 
 Institute for Security and Privacy.</span></span></span></span></span></span></font></p>
@@ -221,7 +222,7 @@ Validation of UML-like models for Reactive Embedded Systems</font></a><i>, G</i>
 <a href="gao.jpg">
 <img border="2" src="gao_small.jpg" xthumbnail-orig-image="gao.jpg"></a></p>
 	<font face="Arial" size="2">
-	<p><b>Xiang Gao, </b>moved to Beihang University as Associate Professor (2022).</p>
+	<p><b>Xiang Gao, </b>moved to Beihang University (2022).</p>
 </font>
 <p>
 <a href="zhen.jpg">
@@ -243,7 +244,7 @@ Senior Research Fellow (2013-17),&nbsp; PhD Aarhus U. (Denmark), Moved to Ulsan
 <span class="scopediv pageHeader" id="pageHeader0">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson0">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser0"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp;Research 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp;Research 
 Fellow &amp; Senior 
 Research Fellow (2015-18), PhD NUS -&gt; </span></span></span></span></span></span>
 <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString1">
@@ -259,7 +260,7 @@ Monash -&gt; Faculty Member, Max-Planck Institute for Security and Privacy.</spa
 (Switzerland), moved to Politecnico di Milano.</font></p>
 <p><a href="clement.jpg">
 <img border="2" src="clement_small.jpg" xthumbnail-orig-image="clement.jpg"></a></p>
-<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">ClÃ©ment Ballabriga</a></b>, Research Fellow 
+<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">Clément Ballabriga</a></b>, Research Fellow 
 at NUS (2012 - 2014), PhD University of Toulouse 
 (France), Moved to University of Lille (France), currently Associate Professor.</font></p>
 <p><a href="bruno.jpg">
