--- a/students.htm
+++ b/students.htm
@@ -150,7 +150,7 @@ Pham</a></b>, <i><a href="Students/Thuan.pdf">Enhancing directed search in black
 <span class="scopediv pageHeader" id="pageHeader">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp; 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp; 
 				<i><a href="Students/Marcel.pdf"><font color="#800080">Automated regression testing and verification of complex code changes</font></a>,</i> 
 Graduated 2014 -&gt; Senior Lecturer, Monash -&gt; Faculty Member, Max-Planck 
 Institute for Security and Privacy.</span></span></span></span></span></span></font></p>
@@ -222,7 +222,7 @@ Validation of UML-like models for Reactive Embedded Systems</font></a><i>, G</i>
 <a href="gao.jpg">
 <img border="2" src="gao_small.jpg" xthumbnail-orig-image="gao.jpg"></a></p>
 	<font face="Arial" size="2">
-	<p><b>Xiang Gao, </b>moved to Beihang University (2022).</p>
+	<p><b>Xiang Gao, </b>Associate Professor at Beihang University, China (2022).</p>
 </font>
 <p>
 <a href="zhen.jpg">
@@ -244,7 +244,7 @@ Senior Research Fellow (2013-17),&nbsp; PhD Aarhus U. (Denmark), Moved to Ulsan
 <span class="scopediv pageHeader" id="pageHeader0">
 <span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson0">
 <span class="scopediv ofUserUser ofUser" id="ofUserUser0"><b>
-<a href="https://mboehme.github.io"><font color="#800080">Marcel Böhme</font></a></b>,&nbsp;Research 
+<a href="https://mboehme.github.io"><font color="#800080">Marcel BÃ¶hme</font></a></b>,&nbsp;Research 
 Fellow &amp; Senior 
 Research Fellow (2015-18), PhD NUS -&gt; </span></span></span></span></span></span>
 <span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString1">
@@ -260,7 +260,7 @@ Monash -&gt; Faculty Member, Max-Planck Institute for Security and Privacy.</spa
 (Switzerland), moved to Politecnico di Milano.</font></p>
 <p><a href="clement.jpg">
 <img border="2" src="clement_small.jpg" xthumbnail-orig-image="clement.jpg"></a></p>
-<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">Clément Ballabriga</a></b>, Research Fellow 
+<p><font face="Arial" size="2"><b><a href="http://www.lifl.fr/emeraude/staff">ClÃ©ment Ballabriga</a></b>, Research Fellow 
 at NUS (2012 - 2014), PhD University of Toulouse 
 (France), Moved to University of Lille (France), currently Associate Professor.</font></p>
 <p><a href="bruno.jpg">
