--- a/students.htm
+++ b/students.htm
@@ -10,12 +10,23 @@
 
 <body text="#000000" bgcolor="#FFFFFF"  background ="CHALK.JPG">
 
+	
 
 
 <h2><font color="#800080" face="Arial" size="6">Graduate Students and Post-doctoral 
 Fellows working with <a href="http://www.comp.nus.edu.sg/~abhik">Abhik</a></font></h2>
 <h2><font color="#800080" face="Arial" size="6">(Secure Software Research Group at NUS)</font></h2>
-<h2><font face="Arial" size="4"> &nbsp;</font><img border="0" src="abhik-pictures/group2022.jpg" width="648" height="324"></h2>
+<h2><font face="Arial" size="4"> &nbsp;</font>
+	
+	
+	<TABLE cols=2 width="1103" border=0>   <TBODY>   <TR>     <TD width="280">       <p align="center"> 	
+	<img border="0" src="abhik-pictures/group2022.jpg" width="648" height="324">      </TD>     <TD width="340">       <DIV align=left>         <blockquote>       	<p>
+<img border="0" src="e-savvy/Picture_2.JPG" width="757" height="324"></p>
+		<p><b><font face="Arial" size="2">With research group members - 2012.</font></b></p>         </blockquote>       </DIV></TD>     
+		<TD width="349">       &nbsp;</TD>   </TR></TBODY></TABLE>     	
+	
+	
+	<img border="0" src="abhik-pictures/group2022.jpg" width="648" height="324"></h2>
 <h2><font face="Arial" size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 A recent group photograph taken in 2022 May. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 </font><b><font face="Arial">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></h2>
