--- a/papers.html
+++ b/papers.html
@@ -4,6 +4,14 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2022</font></i></b></p>
+	 
+	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Sec22]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Stateful Greybox Fuzzing
+		( <a href="https://arxiv.org/pdf/2204.02545.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jinsheng Ba, Marcel Boehme, Zahra Mirzamomen, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">31st USENIX Security Symposium 2022.</p> 
 	
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Sec22]</b></p>
